--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -153,6 +153,7 @@
     "static.common.continueTo": "Continua a",
     "static.usagePeriod.conversionFactorTest": "São permitidos no máximo 5 dígitos enteros e 4 dígitos após o decimal.",
     "static.program.realmcountrydashboard": "País",
+    "static.priority.highDesc": "O problema envolve inconvenientes significativos para os usuários, como não conseguir completar sua previsão ou plano de fornecimento. (Afeta uma função crítica para os negócios e não existem soluções alternativas).",
     "static.realm.maxMosMaxGaurdrail": "Insira o limite superior para os Meses de Stock Máx.",
     "static.dataEntryAndAdjustments.DetailedData": "A tabela de dados detalhada permite que os usuários adicionem, editem, ajustem ou excluam registros históricos de consumo.",
     "static.message.user.tokenNotGenerated": "O usuário não pôde ser desbloqueado, pois a senha de uso único não pôde ser gerada",
@@ -165,6 +166,7 @@
     "static.integration.editIntegration": "Editar integração",
     "static.dashboard.qatProblemList": "Lista de Problemas QAT",
     "static.placeholder.LagInMonthFUNode": "Use esse recurso para uso do produto em fases. Por exemplo, se o atraso for 2, o uso do produto começará 2 meses após as datas do nó de origem.",
+    "static.priority.medium": "Médio",
     "static.mt.reminders4A": "Se você desvincular um pedido, o pedido QAT reverterá para a nota original e não carregará nenhuma atualização feita após a vinculação. Para isso, recomendamos copiar a nota antes de desvincular e colá-la no embarque QAT depois.",
     "static.dataentry.maxRange": "Selecione o intervalo de datas dentro de 36 meses",
     "static.program.programmanager": "Gestor do programa",
@@ -192,6 +194,7 @@
     "static.tooltip.QATEstimateForInterval": "QAT calcula um intervalo de consumo estimado dividindo o fator de conversão pela quantidade necessária mensalmente",
     "static.supplyPlan.noSkip": "Não - não incluir",
     "static.extrapolation.DegreeOfDifferencing": "d ou I (grau de diferenciação)",
+    "static.priority": "Prioridade",
     "static.program.realmcountry": "País",
     "static.monthlyForecast.EUAllow": "(EUs) permitem que os usuários agreguem dados em unidades de planeamento ou unidades de previsão diferentes, mas com a mesma unidade de equivalência. Para obter mais explicações sobre Unidades de Equivalência, consulte a orientação no",
     "static.equivalancyUnit.UserForecasted": "Por exemplo, se um usuário previsse 10.000 barras de chocolate amargo e 10.000 barras de chocolate branco e 14.000 por mês, o QAT exibiria 7.000 Tratamentos para QATite.",
@@ -493,6 +496,7 @@
     "static.program.validstatus": "Selecione o status",
     "static.message.fundingSource.listNotFound": "Nenhuma fonte de financiamento encontrada",
     "static.shipment.linkingsuccess": "Embarque vinculado com sucesso",
+    "static.priority.high": "Alto",
     "static.commitTree.forecastValidation": "Validação da previsão",
     "static.common.integrationViewtext": "Selecione a visão de integração",
     "static.shipment.receiveddate": "Data de recebimento",
@@ -529,6 +533,7 @@
     "static.modelingValidation.number": "Número",
     "static.organisation.organisationName": "Nome da organização",
     "static.common.pleaseSelect": "Por favor, selecione",
+    "static.shipmentTooltip.localProcurementAgent": "Se marcada, o QAT usará o lead time do agente de compras local inserido pelo usuário na tela Atualizar unidade de planejamento",
     "static.extrapolation.AfterReviewing": "Após revisar a tabela principal, a tabela de erros e os gráficos, selecione o método de previsão desejado na parte inferior da tela e clique em “Salvar”.",
     "static.tooltip.LagInMonth": "0 indica uso imediato",
     "static.supplyPlan.psmShipmentsDetails": "Detalhes do embarque PSM",
@@ -703,6 +708,7 @@
     "static.fundingsource.fundingsourceCodeText": "Insira o nome de exibição da fonte de financiamento",
     "static.supplier.suppliertext": "Insira o nome do fabricante",
     "static.common.level": "Nível",
+    "static.priority.low": "Baixo",
     "static.common.customWarningMessage": "Texto de aviso personalizado para alertar os usuários sobre a alteração dos mestres",
     "static.manualTagging.conversionFactor": "Conversão (EGP para QAR)",
     "static.procurementUnit.widthQty": "Quantidade de largura",
@@ -815,6 +821,7 @@
     "static.planningUnit.conversionFactor": "São permitidos no máximo 10 dígitos e 2 dígitos após o decimal.",
     "static.common.back": "\nVoltar",
     "static.procurementUnit.unitsPerContainer": "Unidades por contêiner 40'",
+    "static.shipmentTooltip.pricePerPU": "Fornecido com base na seguinte ordem: preço do PA PU específico do programa (inserido pelo usuário) -> preço do PA PU no nível da região -> preço do PU específico do programa (inserido pelo usuário)",
     "static.tooltip.yAxisInEquivalencyUnit": "Se sim - o eixo Y é exibido em unidades de equivalência, o que permite que a previsão seja exibida em unidades programáticas e combinada com outros produtos que compartilham as mesmas unidades de equivalência. Administradores do programa: Usem a tela Unidades de Equivalência para gerenciar unidades de equivalência.",
     "static.dataentry.notesMaxLength": "Máximo de 600 caracteres",
     "static.extrapolation.EachPlanningUnit": "tela para cada unidade de planejamento e região que você deseja extrapolar",
@@ -955,7 +962,7 @@
     "static.tooltip.OneTimeUsage": "(Somente para uso discreto)) Se Sim, a unidade de previsão é usada apenas uma vez e os campos subsequentes não serão obrigatórios",
     "static.extrapolation.LinearRegressionTextOne": "A regressão linear modela a relação entre duas variáveis ajustando uma equação linear aos dados observados. Intervalo de confiança",
     "static.shipment.shipmentQtyARU": "Quantidade do pedido (ARU)",
-    "static.dataentry.reportingRate": "Taxa de Relatório",
+    "static.dataentry.reportingRate": "Taxa de Relatório (%)",
     "static.tooltip.tracercategoryModelingType": "Selecione uma categoria de rastreador para restringir a lista de unidades de previsão para selecionar",
     "static.masterDataSync.of": "do",
     "static.extrapolation.Seasonality": "Sazonalidade",
@@ -1262,6 +1269,7 @@
     "static.procurementAgent.UnitPerPalletEuro1": "Unidade por palete (EURO1)",
     "static.countrySpecificPrices.countrySpecificPrices": "Preços do agente de compras do programa",
     "static.procurementAgent.UnitPerPalletEuro2": "Unidade por palete (EURO2)",
+    "static.shipmentTooltip.budget": "Cada remessa além da etapa planejada requer um orçamento. Adicione ou atualize informações de orçamento na tela Orçamento",
     "static.unitType.unitTypeName": "Nome do tipo de unidade",
     "static.mapProcurementUnit.validProcurementUnitText": "Selecione a unidade de aquisição",
     "static.breadcrum.add": "Adicionar {{entityname}}",
@@ -1328,6 +1336,7 @@
     "static.message.sessionChange": "Você não pode alterar a sua sessão de online para offline ou vice-versa",
     "static.program.actioncancelled": "Ação de {{master.name}} cancelada",
     "static.supplyPlan.orderDate": "Data do pedido",
+    "static.shipmentTooltip.aru": "Inserido pelo usuário para cada país na tela Unidade de Relatório Alternativa",
     "static.compareAndSelect.selectAsForecast": "Selecione como previsão?",
     "static.tree.levelName": "Nome do nível",
     "static.reports.forecastMetrics.noConsumptionAcrossPeriod": "Nenhum dos meses neste período contém a previsão de consumo nem o consumo real",
@@ -1831,6 +1840,7 @@
     "static.report.problemDescription": "Descrição do problema",
     "static.realm.restrictionForecastConsumption": "Restrição de entrada de dados para previsão de consumo",
     "static.procurementUnit.validPlanningUnitText": "Selecione a unidade de planeamento",
+    "static.shipmentTooltip.emergencyShipment": "Se marcada, a remessa será destacada em vermelho",
     "static.mt.delinkAllShipments": "Você desvinculou todos os embarques. Seus dados serão revertidos para o(s) embarque(s) QAT original (ais). Tem certeza de que deseja continuar?",
     "static.organisation.organisationname": "Nome da organização",
     "static.extrapolation.ConfidenceIntervalText": "entre 78% e 99% (exclusivo), por exemplo, nível de confiança de 90% indica que 90% dos pontos futuros devem cair dentro deste raio de previsão.",
@@ -1892,6 +1902,7 @@
     "static.common.forForecastPeriod": "Para o período de previsão",
     "static.technicalArea.productcategorynametext": "Insira o nome da categoria da unidade de planeamento",
     "static.message.user.usernameExists": "Este nome de usuário já existe",
+    "static.common.onlyDownloadedProgram": "Mostrar apenas programas baixados",
     "static.datasource.datasource": "Fonte de dados",
     "static.usagePeriod.usageInWords": "Uso em palavras",
     "static.message.failedPasswordUpdate": "Não foi possível atualizar a senha",
@@ -1977,6 +1988,7 @@
     "static.common.jan": "jan.",
     "static.common.startdateCompare": "A data de início deve ser antes da data de término",
     "static.common.description": "Descrição",
+    "static.shipmentTooltip.qatShipmentId": "Atribuído automaticamente pelo QAT quando o plano de fornecimento é carregado no servidor",
     "static.manualTagging.searchErpOrders": "Pesquisar embarques vinculados ao ERP",
     "static.message.newPasswordNotSameAsOldPassword": "A nova senha não pode ser igual a senha antiga",
     "static.common.Date[YMD]": "Data (anos, meses, data)",
@@ -2369,6 +2381,7 @@
     "static.dataEntryAndAdjustments.GraphBelow": "Use o gráfico abaixo da tabela Dados Detalhados para visualizar os dados ajustados (nota: o gráfico só será atualizado após clicar em “enviar”)",
     "static.modelingValidation.fyMay": "Ano fiscal (por exemplo, o ano fiscal de 2023 começa em 23 de Poderia)",
     "static.QATForecastImport.ForecastToMultiRegion": "Previsão nacional para plano de abastecimento multirregional - observe que o processo de importação precisa ser repetido para cada região do plano de abastecimento.",
+    "static.shipmentTooltip.conversionFactor": "Inserido pelo usuário na tela Unidade de relatório alternativa",
     "static.common.max20digittext": "Máximo de 20 caracteres",
     "static.report.productCatalogReport": "Catálogo de Produtos",
     "static.report.productCost": "Custo da unidade de planeamento (USD)",
@@ -2516,6 +2529,7 @@
     "static.forecastingUnit.genericForecastingUnitName": "Nome genérico para unidade de previsão",
     "static.ModelingTransfer.calculatesJanMonth": "A QAT calcula que essa mudança seja de 54,32 em janeiro-22,",
     "static.manualIntegration.addManualIntegration": "Solicitar JSON",
+    "static.shipmentTooltip.procurementAgent": "Adicionar/remover agentes de compras na tela Atualizar informações do programa",
     "static.commitVersion.localV": "local v",
     "static.dataEntryAndAdjustments.StockOutRate": "Taxa de Falta de Estoque",
     "static.procurementUnit.validMaxValueText": "São permitidos no máximo 14 caracteres",
@@ -2560,6 +2574,7 @@
     "static.planningunit.planningunittext": "Insira a unidade de planeamento",
     "static.supplyPlan.qty": "Qt",
     "static.report.withinstock": "Status do Stock",
+    "static.priority.highestDesc": "O QAT está inativo ou o usuário não consegue fazer login.",
     "static.inventoryDate.inventoryReport": "Mês",
     "static.equivalancyUnit.type": "Tipo",
     "static.report.forecastErrorMonthlyFormulaNew2": "onde n = número de meses selecionados na ‘janela temporal’, A = consumo real (ou consumo real ajustado), F = consumo previsto, t = tempo em meses.",
@@ -2582,6 +2597,7 @@
     "static.programPU.minQtyTooltip": "Obrigatório se planejar por quantidade. Observe que MOS máximo = MOS mínimo + intervalo de reordenação. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "Para o programa {{programCode}}, existe uma versão mais recente no servidor. Você quer descarregar e deletar? (Aviso! Você tem alterações não confirmadas)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Carregar Consumo do Plano de Suprimento",
+    "static.shipmentTooltip.freightCost": "Calculado usando a porcentagem de frete inserida pelo usuário na tela Atualizar informações do programa",
     "static.dataEntryAndAdjustments.NumberOfStock": "Para dados importados, o número de dias de falta de estoque é obtido do programa de plano de fornecimento QAT, se os dados forem coletados. O valor padrão para dias de falta de estoque é zero dias (produto assumido sempre em estoque). O usuário pode alterar isso para o valor correto. O cálculo pressupõe que os dias em que o produto ficou sem estoque teriam a mesma taxa de consumo que o restante do tempo em que o produto ficou em estoque. O valor padrão para o número de dias em um mês é baseado nos dias do calendário, mas os usuários podem ajustar o número de dias usados para o cálculo de falta de estoque em",
     "static.program.dataimportsuccess": "Dados importados com sucesso",
     "static.ManageTree.ClickOnGearIcon": "Clique no ícone de engrenagem",
@@ -2610,6 +2626,7 @@
     "static.report.forecastErrorMonthlyFormulaNew9": "Para cada mês, soma todo o consumo previsto em todas as regiões, de modo que haja apenas um valor de consumo previsto por mês.",
     "static.commitVersion.exculdeTreeTooltip": "Se marcado, o QAT excluirá quaisquer alterações nesta árvore na versão {{localVersionId}} (local) e reverterá para a versão mais recente do servidor {{serverVersionId}}.",
     "static.forecastReport.yAxisInEquivalencyUnit": "Eixo Y-na unidade de equivalência",
+    "static.shipmentTooltip.fundingSource": "Adicionar/remover fontes de financiamento na tela Atualizar informações do programa",
     "static.status.status": "Status",
     "static.user.usermanual": "Manual do utilizador",
     "static.country.countrycode": "Nome de exibição do país",
@@ -2637,6 +2654,7 @@
     "static.report.forecastConsumption": "Consumo previsto",
     "static.supplyPlan.batchInfo": "Informação de lote",
     "static.common.otherUnit": "Outra unidade",
+    "static.priority.lowDesc": "O problema é perceptível, mas não é crítico para as operações diárias e seria bom resolvê-lo eventualmente. (Afeta uma função não crítica para os negócios).",
     "static.pipeline.consumptionDate": "Mês de consumo",
     "static.common.dataCheck": "Verificação de dados",
     "static.extrapolation.MinimumValues": "meses de dados de consumo real. Os valores mínimos necessários para os vários recursos estão abaixo",
@@ -2755,6 +2773,7 @@
     "static.procurementagent.procurementAgentColorCode": "Código de cores",
     "static.language.languagecodetext": "Insira o nome de exibição do idioma",
     "static.userHead.user": "Usuário",
+    "static.priority.mediumDesc": "O usuário pode aguardar uma resolução sem causar interrupções substanciais (afeta uma função crítica para os negócios, mas existe uma solução alternativa).",
     "static.procurementUnit.unitsPerContainerText": "Insira número de unidades por contêiner 40'",
     "static.shipment.shipdate": "Data de envio",
     "static.extrapolation.ForecastMethods": "Os métodos de previsão no QAT são organizados do simples ao sofisticado.",
@@ -2851,9 +2870,11 @@
     "static.supplyPlan.amc": "CMM",
     "static.programPU.localProcurementAgentTooltip": "Lead time do planejado ao recebido. Usado para remessas em que `aquisição local` é selecionada.",
     "static.dashboard.viewSupplyPlan": "Ver planos de suprimento pendentes de aprovação",
+    "static.priority.highest": "Altíssima",
     "static.QATForecastImport.StepTwo": "(Passo 2)",
     "static.forecastProgram.MaxvalueofStockoutdays": "Valor máximo de dias em ruptura",
     "static.report.shippedToArrivedRoadLeadTime": "Enviado para Chegado (Estrada)",
+    "static.shipmentTooltip.puCost": "Quantidade do pedido (PU) * Preço por PU",
     "static.program.programDiscription": "Notas da versão",
     "static.organisation.organisationtext": "Insira o nome da organização",
     "static.supplyPlan.notesDetailsCon": "DD-MMM-YY (Region | Data Source) Notes",
@@ -3176,6 +3197,7 @@
     "static.usageTemplate.calculateUsageFrequency": "Calcular a frequência de uso",
     "static.ForecastSummary.ForecastedQuantity": "Quantidade total prevista",
     "static.ManageTree.PotentialChildren": "Nós derivados em potencial",
+    "static.shipmentTooltip.total": "Custo PU + Custo de Frete",
     "static.problemReport.issueReviewStatus": "Status de revisão do problema",
     "static.pipeline.pplnfundingsource": "Fonte de financiamento do PipeLine",
     "static.equivalancyUnit.ManageMappings": "Use a tela principal para gerenciar mapeamentos entre unidades de equivalência e unidades de previsão. Os mapeamentos a nível de domínio estão disponíveis para todos os usuários e são indicados por \"Todos\".",
@@ -3210,6 +3232,7 @@
     "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Configurações da Unidade de Planeamento",
     "static.compareAndSelect.selectOne": "Selecione uma previsão para",
     "static.forecastValidation.noBranchesMissingPU": "Nenhum ramo sem unidades de planeamento",
+    "static.shipmentTooltip.orderQtyPU": "Quantidade do pedido (ARU) * Fator de conversão",
     "static.common.realmLevel": "Nível de reino",
     "static.user.validemail": "Insira o seu endereço de e-mail",
     "static.dataEntryAndAdjustments.DataIsAssumed": "Por padrão, supõe-se que os dados sejam inseridos na Unidade de planejamento. No entanto, o usuário pode especificar a unidade apropriada para os dados detalhados clicando no link alterar sob o nome do produto e no pop-up subsequente, optando por inserir dados usando a unidade de planejamento, as quantidades da unidade de previsão (aplicando um domínio -fator de conversão gerenciado) ou outra unidade inserida pelo usuário (e fator de conversão).",
@@ -3231,6 +3254,7 @@
     "static.organisationType.organisationTypeName": "Nome do tipo de organização",
     "static.ModelingTransfer.ShowMonthlyData": "Além disso, clicando em “Mostrar dados mensais”, os usuários podem ver como suas entradas de modelagem e transferência afetaram os dados mensais em forma gráfica e tabular. Nos dados tabulares, os usuários podem adicionar uma alteração manual para um mês específico ou inserir uma porcentagem do índice de sazonalidade (disponível apenas para nós % ), conforme necessário. Se um usuário marcar \"A alteração manual afeta os meses futuros', o valor manual adicionado ao final do mês será transferido para o início do próximo mês. Se nenhum desses campos for relevante, os usuários poderão desmarcar \"Mostrar (sazonalidade e) alteração manual\" para ocultar essas colunas.",
     "static.report.maxMosOrQty": "Max (meses ou qtd)",
+    "static.shipmentTooltip.erpFlag": "Verificado automaticamente se esta remessa está vinculada usando a tela Vincular remessa do ERP",
     "static.productValidation.subTotal": "Subtotal",
     "static.report.problemAction.automatic": "Gerado automaticamente",
     "static.shipmentDataEntry.suggestedShipmentQtyConfirm1": "Sugerir adicionar",
