--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -153,6 +153,7 @@
     "static.common.continueTo": "Continue to",
     "static.usagePeriod.conversionFactorTest": "Max 5 digit number and 4 digits after decimal are allowed.",
     "static.program.realmcountrydashboard": "Country",
+    "static.priority.highDesc": "Problem involves significant inconveniences for users, such as not being able to complete their forecast or supply plan. (Affects a business-critical function and no workarounds exist).",
     "static.realm.maxMosMaxGaurdrail": "Enter guardrail for MAX MOS (max months)",
     "static.dataEntryAndAdjustments.DetailedData": "The detailed data table allows users to add, edit, adjust, or delete historical consumption records.",
     "static.message.user.tokenNotGenerated": "User could not be unlocked as one-time password could not be generated",
@@ -165,6 +166,7 @@
     "static.integration.editIntegration": "Edit Integration",
     "static.dashboard.qatProblemList": "QAT Problem List",
     "static.placeholder.LagInMonthFUNode": "Use this feature for phased product usage. For example, if the lag is 2, the product usage will begin 2 months after the parent node dates.",
+    "static.priority.medium": "Medium",
     "static.mt.reminders4A": "If you delink a shipment, the QAT shipment will revert to the original shipment’s note and not carry over any updates you made after linking. For this, we recommend copying the note before de-linking and pasting it into the QAT shipment after.",
     "static.dataentry.maxRange": "Please select date range within 36 months",
     "static.program.programmanager": "Program manager",
@@ -192,6 +194,7 @@
     "static.tooltip.QATEstimateForInterval": "QAT calculates an estimated consumption interval by dividing conversion factor by the quantity required monthly",
     "static.supplyPlan.noSkip": "No - Do not Include",
     "static.extrapolation.DegreeOfDifferencing": "d or I (degree of differencing)",
+    "static.priority": "Priority",
     "static.program.realmcountry": "Country",
     "static.monthlyForecast.EUAllow": "(EUs) allow users to aggregate data across planning units or forecasting units that are different but have the same equivalency unit. For a further explanation of Equivalency Units, refer to the show guidance in the",
     "static.equivalancyUnit.UserForecasted": "For example, if a user forecasted 10,000 bars of dark chocolate, and 10,000 bars of white chocolate and 14,000 per month, QAT would display 7,000 Treatments for QATitis.",
@@ -493,6 +496,7 @@
     "static.program.validstatus": "Select Status",
     "static.message.fundingSource.listNotFound": "No funding source found",
     "static.shipment.linkingsuccess": "Shipment linked successfully",
+    "static.priority.high": "High",
     "static.commitTree.forecastValidation": "Forecast Validation",
     "static.common.integrationViewtext": "Select integration View",
     "static.shipment.receiveddate": "Receive Date",
@@ -529,6 +533,7 @@
     "static.modelingValidation.number": "Number",
     "static.organisation.organisationName": "Organization name",
     "static.common.pleaseSelect": "Please Select",
+    "static.shipmentTooltip.localProcurementAgent": "If checked, QAT will use the user-entered local procurement agent lead time in the Update Planning Unit screen",
     "static.extrapolation.AfterReviewing": "After reviewing the main table, the error table, and the graphs, select the desired forecast method at the bottom of the screen and click “Save.”",
     "static.tooltip.LagInMonth": "0 indicates immediate usage",
     "static.supplyPlan.psmShipmentsDetails": "PSM Shipment Details",
@@ -703,6 +708,7 @@
     "static.fundingsource.fundingsourceCodeText": "Enter Funding Source Display Name",
     "static.supplier.suppliertext": "Enter manufacturer",
     "static.common.level": "Level",
+    "static.priority.low": "Low",
     "static.common.customWarningMessage": "Custom warning text to warn users about changing masters",
     "static.manualTagging.conversionFactor": "Conversion (ERP to QAT)",
     "static.procurementUnit.widthQty": "Width Quantity",
@@ -815,6 +821,7 @@
     "static.planningUnit.conversionFactor": "Max 10 digit number and 2 digits after decimal are allowed.",
     "static.common.back": "Back",
     "static.procurementUnit.unitsPerContainer": "Units per 40' Container",
+    "static.shipmentTooltip.pricePerPU": "Provided based on the following order: program-specific PA PU price (user entered) -> realm-level PA PU price -> program-specific PU price (user entered)",
     "static.tooltip.yAxisInEquivalencyUnit": "If yes - Y-axis is displayed in equivalency units, which allows the forecast to be displayed in programmatic units and combined with other products that share the same equivalency units. Program Admins: Use the Equivalency Units screen to manage equivalency units.",
     "static.dataentry.notesMaxLength": "Maximum 600 characters only",
     "static.extrapolation.EachPlanningUnit": "screen for each planning unit and region you would like to extrapolate",
@@ -955,7 +962,7 @@
     "static.tooltip.OneTimeUsage": "(Discrete only)) If Yes, the forecasting unit is only used once and subsequent fields will not be required",
     "static.extrapolation.LinearRegressionTextOne": "Linear regression models the relationship between two variables by fitting a linear equation to observed data. Confidence interval",
     "static.shipment.shipmentQtyARU": "Order Quantity (ARU)",
-    "static.dataentry.reportingRate": "Reporting Rate",
+    "static.dataentry.reportingRate": "Reporting Rate (%)",
     "static.tooltip.tracercategoryModelingType": "Select a tracer category to narrow down the list of forecasting units to select from",
     "static.masterDataSync.of": "of",
     "static.extrapolation.Seasonality": "Seasonality",
@@ -1262,6 +1269,7 @@
     "static.procurementAgent.UnitPerPalletEuro1": "Unit Per Pallet (EURO1)",
     "static.countrySpecificPrices.countrySpecificPrices": "Program/Procurement Agent Prices",
     "static.procurementAgent.UnitPerPalletEuro2": "Unit Per Pallet (EURO2)",
+    "static.shipmentTooltip.budget": "Each shipment beyond the planned stage requires a budget. Add or update budget information in the Budget screen",
     "static.unitType.unitTypeName": "Unit type name",
     "static.mapProcurementUnit.validProcurementUnitText": "Select Procurement Unit",
     "static.breadcrum.add": "Add {{entityname}}",
@@ -1328,6 +1336,7 @@
     "static.message.sessionChange": "You cannot change your session from online to offline or vice versa",
     "static.program.actioncancelled": "{{master.name}} action cancelled",
     "static.supplyPlan.orderDate": "Order Date",
+    "static.shipmentTooltip.aru": "User-entered for each country in the Alternate Reporting Unit screen",
     "static.compareAndSelect.selectAsForecast": "Select as forecast?",
     "static.tree.levelName": "Level name",
     "static.reports.forecastMetrics.noConsumptionAcrossPeriod": "No months in this period contain both forecast and actual consumption",
@@ -1831,6 +1840,7 @@
     "static.report.problemDescription": "Problem Description",
     "static.realm.restrictionForecastConsumption": "Data entry restriction for Forecast Consumption",
     "static.procurementUnit.validPlanningUnitText": "Select Planning Unit",
+    "static.shipmentTooltip.emergencyShipment": "If checked, shipment will be highlighted red",
     "static.mt.delinkAllShipments": "You have delinked all the shipments. Your data will be reverted to the original QAT shipment. Are you sure you want to continue?",
     "static.organisation.organisationname": "Organization Name",
     "static.extrapolation.ConfidenceIntervalText": "between 0% and 100% (exclusive) e.g. 90% confidence level indicates 90% of future points are to fall within this radius from prediction.",
@@ -1892,6 +1902,7 @@
     "static.common.forForecastPeriod": "For the forecast period",
     "static.technicalArea.productcategorynametext": "Enter Planning Unit Category name",
     "static.message.user.usernameExists": "Username already exists",
+    "static.common.onlyDownloadedProgram": "Show only downloaded programs",
     "static.datasource.datasource": "Data source",
     "static.usagePeriod.usageInWords": "Usage In Words",
     "static.message.failedPasswordUpdate": "Could not update password",
@@ -1977,6 +1988,7 @@
     "static.common.jan": "Jan",
     "static.common.startdateCompare": "Start date should be before end date",
     "static.common.description": " Description",
+    "static.shipmentTooltip.qatShipmentId": "Automatically assigned by QAT when supply plan is uploaded to the server",
     "static.manualTagging.searchErpOrders": "Search ERP-linked shipments",
     "static.message.newPasswordNotSameAsOldPassword": "New password cannot be the same as the old password",
     "static.common.Date[YMD]": "Date(years,months,date)",
@@ -2369,6 +2381,7 @@
     "static.dataEntryAndAdjustments.GraphBelow": "Use the graph below the Detailed Data table to view the adjusted data (note: graph will only update after clicking “submit”)",
     "static.modelingValidation.fyMay": "Fiscal Year (e.g. FY2023 starts in May-23)",
     "static.QATForecastImport.ForecastToMultiRegion": "National forecast to multi-region supply plan - note that the import process needs to be repeated for each supply plan region.",
+    "static.shipmentTooltip.conversionFactor": "User-enetered in the Alternate Reporting Unit screen",
     "static.common.max20digittext": "Maximum of 20 characters",
     "static.report.productCatalogReport": "Product Catalog",
     "static.report.productCost": "Planning Unit Cost (USD)",
@@ -2516,6 +2529,7 @@
     "static.forecastingUnit.genericForecastingUnitName": "Generic Name for Forecasting Unit",
     "static.ModelingTransfer.calculatesJanMonth": "QAT calculates this change to be 54.32 in Jan-22 month,",
     "static.manualIntegration.addManualIntegration": "Request JSON",
+    "static.shipmentTooltip.procurementAgent": "Add/remove procurement agents in the Update Program Info screen",
     "static.commitVersion.localV": "Local v",
     "static.dataEntryAndAdjustments.StockOutRate": "Stock Out Rate",
     "static.procurementUnit.validMaxValueText": "A maximum of 14 characters are allowed",
@@ -2560,6 +2574,7 @@
     "static.planningunit.planningunittext": "Enter Planning Unit",
     "static.supplyPlan.qty": "Qty",
     "static.report.withinstock": "Stock Status",
+    "static.priority.highestDesc": "QAT is down or user cannot log in.",
     "static.inventoryDate.inventoryReport": "Month",
     "static.equivalancyUnit.type": "Type",
     "static.report.forecastErrorMonthlyFormulaNew2": "where n = number of months selected in the ‘time window’, A = actual consumption (or adjusted actual consumption), F = forecasted consumption, t = time in months.",
@@ -2582,6 +2597,7 @@
     "static.programPU.minQtyTooltip": "Required if planning by quantity. Note that maximum MOS = min MOS + reorder interval. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "For program {{programCode}}, There is a most recent server version. Do you want to download and delete? (Warning! you have non uploaded changes)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Load Consumption from Supply Planning",
+    "static.shipmentTooltip.freightCost": "Calculated using the user-entered freight percentage in the Update Program Info screen",
     "static.dataEntryAndAdjustments.NumberOfStock": "For imported data, the number of stock out days is pulled in from the QAT supply plan program, if data is collected. The default value for stock out days is zero days (product assumed always in stock). The user can change this to the correct value. The calculation assumes that the days the product was stocked out would have had the same consumption rate as the rest of the time the product was in stock. The default value for number of days in a month are based on the calendar days, but users can adjust the number of days used for the stock out calculation in",
     "static.program.dataimportsuccess": "Data imported successfully",
     "static.ManageTree.ClickOnGearIcon": "Click on the gear icon",
@@ -2610,6 +2626,7 @@
     "static.report.forecastErrorMonthlyFormulaNew9": "For each month, adds up all the forecasted consumption across all regions, so that there is only one forecasted consumption figure per month. ",
     "static.commitVersion.exculdeTreeTooltip": "If checked, QAT will exclude any changes to this tree on version {{localVersionId}} (local) and revert to the latest server version {{serverVersionId}}.",
     "static.forecastReport.yAxisInEquivalencyUnit": "Y-axis in equivalency unit",
+    "static.shipmentTooltip.fundingSource": "Add/remove funding sources in the Update Program Info screen",
     "static.status.status": "Status",
     "static.user.usermanual": "User Manual",
     "static.country.countrycode": "Country display name",
@@ -2637,6 +2654,7 @@
     "static.report.forecastConsumption": "Forecasted Consumption",
     "static.supplyPlan.batchInfo": "Batch Information",
     "static.common.otherUnit": "Other Unit",
+    "static.priority.lowDesc": "Problem is noticeable but not critical to daily operations and would be good to fix eventually. (Affects a non-business-critical function).",
     "static.pipeline.consumptionDate": "Consumption Month",
     "static.common.dataCheck": "Data Check",
     "static.extrapolation.MinimumValues": "months of actual consumption data. The minimum values needed for the various features are below",
@@ -2755,6 +2773,7 @@
     "static.procurementagent.procurementAgentColorCode": "Color Code",
     "static.language.languagecodetext": "Enter language display name",
     "static.userHead.user": "User",
+    "static.priority.mediumDesc": "User can wait for a resolution without causing substantial disruption (Affects a business-critical function, but a workaround exists).",
     "static.procurementUnit.unitsPerContainerText": "Enter Units per 40' Container",
     "static.shipment.shipdate": "Shipped Date",
     "static.extrapolation.ForecastMethods": "Forecast methods in QAT are organized from simple to sophisticated.",
@@ -2851,9 +2870,11 @@
     "static.supplyPlan.amc": "AMC",
     "static.programPU.localProcurementAgentTooltip": "Lead time from planned to received. Used for shipments where `local procurement` is selected.",
     "static.dashboard.viewSupplyPlan": "View Supply Plans Pending Approval",
+    "static.priority.highest": "Highest",
     "static.QATForecastImport.StepTwo": "(Step 2)",
     "static.forecastProgram.MaxvalueofStockoutdays": "Max Value Of Stock Out Days",
     "static.report.shippedToArrivedRoadLeadTime": "Shipped to Arrived (Road)",
+    "static.shipmentTooltip.puCost": "Order Qty (PU) * Price per PU",
     "static.program.programDiscription": "Version Notes",
     "static.organisation.organisationtext": "Enter Organization Name",
     "static.supplyPlan.notesDetailsCon": "DD-MMM-YY (Region | Data Source) Notes",
@@ -3176,6 +3197,7 @@
     "static.usageTemplate.calculateUsageFrequency": "Calculate Usage Frequency",
     "static.ForecastSummary.ForecastedQuantity": "Total Forecasted Quantity",
     "static.ManageTree.PotentialChildren": "Potential Children",
+    "static.shipmentTooltip.total": "PU Cost + Freight Cost",
     "static.problemReport.issueReviewStatus": "Problem Review Status",
     "static.pipeline.pplnfundingsource": "Pipeline Funding Source",
     "static.equivalancyUnit.ManageMappings": "Use the main screen to manage mappings between equivalency units and forecasting units. Realm-level mappings are available to all users and are indicated by All.",
@@ -3210,6 +3232,7 @@
     "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Planning Unit Settings",
     "static.compareAndSelect.selectOne": "Select one forecast for",
     "static.forecastValidation.noBranchesMissingPU": "No branches missing planning units",
+    "static.shipmentTooltip.orderQtyPU": "Order Qty (ARU) * Conversion Factor",
     "static.common.realmLevel": "Realm Level",
     "static.user.validemail": "Enter Email Address",
     "static.dataEntryAndAdjustments.DataIsAssumed": "By default, data is assumed to be entered in the Planning Unit. However, the user can specify the appropriate unit for the detailed data by clicking on the “change” link under the product name and in the subsequent pop-up, choosing to enter data using the planning unit, the forecasting unit quantities (applying a realm-managed conversion factor) or another user-entered unit (and conversion factor).",
@@ -3231,6 +3254,7 @@
     "static.organisationType.organisationTypeName": "Organization Type Name",
     "static.ModelingTransfer.ShowMonthlyData": "Additionally, by clicking on “Show Monthly Data,” users can see how their modelling and transfer inputs have affected the monthly data in both a graphical and tabular form. In the tabular data, users may add a manual change for a specific month or input a seasonality index percentage (only available for % nodes), as needed. If a user checks “Manual Change affects future month,” the manual amount added to the end of the month will carry over to the beginning of the next month. If neither of these fields are relevant, users can uncheck “Show (seasonality &) manual change” to hide these columns.",
     "static.report.maxMosOrQty": "Max (months or qty)",
+    "static.shipmentTooltip.erpFlag": "Auto-checked if this shipment is linked using the Link ERP Shipment screen",
     "static.productValidation.subTotal": "SubTotal",
     "static.report.problemAction.automatic": "Automatically Generated",
     "static.shipmentDataEntry.suggestedShipmentQtyConfirm1": "Suggest to add",
