--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -153,6 +153,7 @@
     "static.common.continueTo": "Continuar a",
     "static.usagePeriod.conversionFactorTest": "Se permiten un número máximo de 5 dígitos enteros y 4 dígitos después del decimal.",
     "static.program.realmcountrydashboard": "País",
+    "static.priority.highDesc": "El problema implica importantes inconvenientes para los usuarios, como no poder completar su previsión o plan de suministro. (Afecta una función crítica para el negocio y no existen soluciones alternativas).",
     "static.realm.maxMosMaxGaurdrail": "Ingresar límite superior para el nivel MAX de meses de stock",
     "static.dataEntryAndAdjustments.DetailedData": "La tabla de datos detallados permite a los usuarios agregar, editar, ajustar o eliminar registros históricos de consumo.",
     "static.message.user.tokenNotGenerated": "No se pudo desbloquear al usuario porque no se pudo generar la contraseña provisional",
@@ -165,6 +166,7 @@
     "static.integration.editIntegration": "Editar integración",
     "static.dashboard.qatProblemList": "Lista de problemas QAT",
     "static.placeholder.LagInMonthFUNode": "Utilice esta función para el uso del producto por etapas. Por ejemplo, si el atraso es 2, el uso del producto comenzará 2 meses después de las fechas del nodo de orígen.",
+    "static.priority.medium": "Medio",
     "static.mt.reminders4A": "Si desvincula un pedido, volverá a mostrar la nota del pedido original y no transferirá las actualizaciones que realizó después de la vinculación. Para esto, recomendamos copiar la nota antes de desvincular y pegarla en el pedido manual después.",
     "static.dataentry.maxRange": "Seleccione el rango de fechas dentro de los 36 meses",
     "static.program.programmanager": "Gestor del programa",
@@ -192,6 +194,7 @@
     "static.tooltip.QATEstimateForInterval": "QAT calcula un intervalo de consumo estimado dividiendo el factor de conversión por la cantidad requerida mensualmente",
     "static.supplyPlan.noSkip": "No - No incluir",
     "static.extrapolation.DegreeOfDifferencing": "d o I (grado de diferenciación)",
+    "static.priority": "Prioridad",
     "static.program.realmcountry": "País",
     "static.monthlyForecast.EUAllow": "(UE) permiten a los usuarios agregar datos a través de Productos (planificación) o Productos (estimación) que son diferentes pero tienen la misma unidad de equivalencia. Para obtener una explicación más detallada de las Unidades de equivalencia, consulte la guía en el",
     "static.equivalancyUnit.UserForecasted": "Por ejemplo, si un usuario prevé 10 000 barras de chocolate negro, 10 000 barras de chocolate blanco y 14 000 por mes, QAT mostrará 7000 Tratamientos para QATitis.",
@@ -493,6 +496,7 @@
     "static.program.validstatus": "Seleccionar el status",
     "static.message.fundingSource.listNotFound": "No se encontró ninguna fuente de financiamiento",
     "static.shipment.linkingsuccess": "Pedido vinculado correctamente",
+    "static.priority.high": "Alto",
     "static.commitTree.forecastValidation": "Validación de estimación",
     "static.common.integrationViewtext": "Seleccionar vista de integración",
     "static.shipment.receiveddate": "Fecha de recepción",
@@ -529,6 +533,7 @@
     "static.modelingValidation.number": "Número",
     "static.organisation.organisationName": "Nombre de la organización",
     "static.common.pleaseSelect": "Seleccionar",
+    "static.shipmentTooltip.localProcurementAgent": "Si está marcado, QAT utilizará el tiempo de entrega del agente de adquisiciones local ingresado por el usuario en la pantalla Actualizar unidad de planificación.",
     "static.extrapolation.AfterReviewing": "Después de revisar la tabla principal, la tabla de errores y los gráficos, seleccione el método de estimación deseado en la parte inferior de la pantalla y haga clic en Guardar.",
     "static.tooltip.LagInMonth": "0 indica uso inmediato",
     "static.supplyPlan.psmShipmentsDetails": "Detalles de pedidos de PSM",
@@ -703,6 +708,7 @@
     "static.fundingsource.fundingsourceCodeText": "Ingresar el código de la fuente de financiamiento",
     "static.supplier.suppliertext": "Ingresar el fabricante",
     "static.common.level": "Nivel",
+    "static.priority.low": "Bajo",
     "static.common.customWarningMessage": "Texto de advertencia personalizado para advertir a los usuarios sobre el cambio de maestros",
     "static.manualTagging.conversionFactor": "Conversión (ERP a QAT)",
     "static.procurementUnit.widthQty": "Ancho (cantidad)",
@@ -815,6 +821,7 @@
     "static.planningUnit.conversionFactor": "Se permiten un número máximo de 10 dígitos y 2 dígitos después del decimal.",
     "static.common.back": "Regresar",
     "static.procurementUnit.unitsPerContainer": "Unidades por contenedor de 40'",
+    "static.shipmentTooltip.pricePerPU": "Se proporciona según el siguiente orden: precio de PU de PA específico del programa (ingresado por el usuario) -> precio de PU de PA a nivel de dominio -> precio de PU de PA específico del programa (ingresado por el usuario)",
     "static.tooltip.yAxisInEquivalencyUnit": "Si la respuesta es sí, el eje Y se muestra en unidades de equivalencia, lo que permite que la estimación se muestre en unidades programáticas y se combine con otros productos que comparten las mismas unidades de equivalencia. Administradores del programa: usen la pantalla Unidades de Equivalencia para administrar las unidades de equivalencia.",
     "static.dataentry.notesMaxLength": "Máximo 600 caracteres",
     "static.extrapolation.EachPlanningUnit": "pantalla para cada unidad de planificación y región que le gustaría extrapolar",
@@ -955,7 +962,7 @@
     "static.tooltip.OneTimeUsage": "(Solo para uso discreto)) Si la respuesta es Sí, el producto (estimación) solo se usa una vez y los campos subsiguientes no serán obligatorios",
     "static.extrapolation.LinearRegressionTextOne": "La regresión lineal modela la relación entre dos variables ajustando una ecuación lineal a los datos observados. Intervalo de confianza",
     "static.shipment.shipmentQtyARU": "Cantidad de pedido (ARU)",
-    "static.dataentry.reportingRate": "Tasa de reporte",
+    "static.dataentry.reportingRate": "Tasa de reporte (%)",
     "static.tooltip.tracercategoryModelingType": "Seleccione una categoría de seguimiento para reducir la lista de unidades de estimación para seleccionar",
     "static.masterDataSync.of": "de",
     "static.extrapolation.Seasonality": "Estacionalidad",
@@ -1262,6 +1269,7 @@
     "static.procurementAgent.UnitPerPalletEuro1": "No. de unidades por palet (EURO1)",
     "static.countrySpecificPrices.countrySpecificPrices": "Precios del programa / agente de compras",
     "static.procurementAgent.UnitPerPalletEuro2": "No. de unidades por palet (EURO2)",
+    "static.shipmentTooltip.budget": "Cada envío más allá de la etapa planificada requiere un presupuesto. Agregar o actualizar información del presupuesto en la pantalla Presupuesto",
     "static.unitType.unitTypeName": "Nombre del tipo de unidad",
     "static.mapProcurementUnit.validProcurementUnitText": "Seleccionar Producto (compra)",
     "static.breadcrum.add": "Agregar {{entityname}}",
@@ -1328,6 +1336,7 @@
     "static.message.sessionChange": "No puede cambiar su sesión de conectada a desconectada, o viceversa",
     "static.program.actioncancelled": "Se canceló la acción de {{master.name}}",
     "static.supplyPlan.orderDate": "Fecha del pedido",
+    "static.shipmentTooltip.aru": "Ingresado por el usuario para cada país en la pantalla Unidad de informes alternativa",
     "static.compareAndSelect.selectAsForecast": "¿Seleccionar como estimación?",
     "static.tree.levelName": "Nombre del nivel",
     "static.reports.forecastMetrics.noConsumptionAcrossPeriod": "Ningún mes del período contiene tanto el consumo estimado como el real",
@@ -1831,6 +1840,7 @@
     "static.report.problemDescription": "Descripción del problema",
     "static.realm.restrictionForecastConsumption": "Restricción de entrada de datos para consumo de estimación",
     "static.procurementUnit.validPlanningUnitText": "Seleccionar Producto",
+    "static.shipmentTooltip.emergencyShipment": "Si está marcado, el envío se resaltará en rojo.",
     "static.mt.delinkAllShipments": "Ha desvinculado todos los pedidos. Sus datos se revertirán al pedido manual original. ¿Está seguro de que desea continuar?",
     "static.organisation.organisationname": "Nombre de la organización",
     "static.extrapolation.ConfidenceIntervalText": "entre 78 % y 99 % (exclusivo), por ejemplo, un nivel de confianza del 90% indica que el 90% de los puntos futuros se encontrarán dentro de este radio de predicción.",
@@ -1892,6 +1902,7 @@
     "static.common.forForecastPeriod": "Para el período de estimación",
     "static.technicalArea.productcategorynametext": "Ingresar el nombre de la categoría de producto",
     "static.message.user.usernameExists": "Este nombre de usuario ya existe",
+    "static.common.onlyDownloadedProgram": "Mostrar solo programas descargados",
     "static.datasource.datasource": "Fuente de datos",
     "static.usagePeriod.usageInWords": "Uso en palabras",
     "static.message.failedPasswordUpdate": "No se pudo actualizar la contraseña",
@@ -1977,6 +1988,7 @@
     "static.common.jan": "Ene",
     "static.common.startdateCompare": "La fecha de inicio debe ser anterior a la fecha de finalización",
     "static.common.description": "Descripción",
+    "static.shipmentTooltip.qatShipmentId": "QAT lo asigna automáticamente cuando el plan de suministro se carga en el servidor",
     "static.manualTagging.searchErpOrders": "Buscar pedidos vinculados al ERP",
     "static.message.newPasswordNotSameAsOldPassword": "La nueva contraseña no debe ser la misma que la anterior",
     "static.common.Date[YMD]": "Fecha (años, meses, fecha)",
@@ -2369,6 +2381,7 @@
     "static.dataEntryAndAdjustments.GraphBelow": "Use el gráfico debajo de la tabla de datos detallados para ver los datos ajustados (nota: el gráfico solo se actualizará después de hacer clic en \"enviar\")",
     "static.modelingValidation.fyMay": "Año fiscal (por ejemplo, el año fiscal 2023 comienza el 23 de Puede)",
     "static.QATForecastImport.ForecastToMultiRegion": "Estimación nacional a plan de suministro multirregional: tenga en cuenta que el proceso de importación debe repetirse para cada región del plan de suministro.",
+    "static.shipmentTooltip.conversionFactor": "Ingresado por el usuario en la pantalla Unidad de informes alternativa",
     "static.common.max20digittext": "Máximo de 20 caracteres",
     "static.report.productCatalogReport": "Catálogo de productos",
     "static.report.productCost": "Costo del producto (USD)",
@@ -2516,6 +2529,7 @@
     "static.forecastingUnit.genericForecastingUnitName": "Nombre genérico del producto (estimación)",
     "static.ModelingTransfer.calculatesJanMonth": "QAT calcula este cambio de 54,32 en enero-22,",
     "static.manualIntegration.addManualIntegration": "Solicitar JSON",
+    "static.shipmentTooltip.procurementAgent": "Agregar/eliminar agentes de adquisiciones en la pantalla Actualizar información del programa",
     "static.commitVersion.localV": "V local",
     "static.dataEntryAndAdjustments.StockOutRate": "Tasa de desabastecimiento",
     "static.procurementUnit.validMaxValueText": "Se permiten 14 caracteres como máximo.",
@@ -2560,6 +2574,7 @@
     "static.planningunit.planningunittext": "Ingresar el producto",
     "static.supplyPlan.qty": "Cant.",
     "static.report.withinstock": "Status de los stocks",
+    "static.priority.highestDesc": "QAT está inactivo o el usuario no puede iniciar sesión.",
     "static.inventoryDate.inventoryReport": "Mes",
     "static.equivalancyUnit.type": "Tipo",
     "static.report.forecastErrorMonthlyFormulaNew2": "donde n = número de meses seleccionados en la “ventana de tiempo”, A = consumo real (o consumo real ajustado), F = consumo previsto, t = tiempo en meses.",
@@ -2582,6 +2597,7 @@
     "static.programPU.minQtyTooltip": "Obligatorio si se planifica por cantidad. Tenga en cuenta que MOS máximo = MOS mínimo + frecuencia de reorden. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "Para el programa {{programCode}}, hay una versión más reciente en el servidor . ¿Quieres desccargar y borrar? (¡Advertencia! Tiene cambios no confirmados)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Cargar consumo del plan de suministro",
+    "static.shipmentTooltip.freightCost": "Calculado utilizando el porcentaje de flete ingresado por el usuario en la pantalla Actualizar información del programa",
     "static.dataEntryAndAdjustments.NumberOfStock": "Para los datos importados, la cantidad de días en ruptura de stock se extrae del plan de suministro de QAT, si se recopilan esos datos. El valor predeterminado para los días de ruptura es cero días (se supone que el producto siempre está en stock). El usuario puede cambiar esto al valor correcto. El cálculo asume que los días que el producto estuvo en ruptura habrían tenido la misma tasa de consumo que el resto del tiempo que el producto estuvo en stock. El valor predeterminado para la cantidad de días en un mes se basa en los días calendario, pero los usuarios pueden ajustar la cantidad de días utilizados para el cálculo de ruptura de stock en",
     "static.program.dataimportsuccess": "Datos importados correctamente",
     "static.ManageTree.ClickOnGearIcon": "Haga clic en el icono de engranaje",
@@ -2610,6 +2626,7 @@
     "static.report.forecastErrorMonthlyFormulaNew9": "Para cada mes, suma todo el consumo previsto en todas las regiones, de modo que solo haya una cifra de consumo previsto por mes.",
     "static.commitVersion.exculdeTreeTooltip": "Si se marca, QAT excluirá cualquier cambio en este árbol en la versión {{localVersionId}} (local) y volverá a la última versión del servidor {{serverVersionId}}.",
     "static.forecastReport.yAxisInEquivalencyUnit": "Eje Y-en unidad de equivalencia",
+    "static.shipmentTooltip.fundingSource": "Agregar/eliminar fuentes de financiación en la pantalla Actualizar información del programa",
     "static.status.status": "Status",
     "static.user.usermanual": "Manual del usuario",
     "static.country.countrycode": "Código de país",
@@ -2637,6 +2654,7 @@
     "static.report.forecastConsumption": "Consumo estimado",
     "static.supplyPlan.batchInfo": "Información de lote(s)",
     "static.common.otherUnit": "otra unidad",
+    "static.priority.lowDesc": "El problema es notable pero no crítico para las operaciones diarias y sería bueno solucionarlo eventualmente. (Afecta a una función no crítica para el negocio).",
     "static.pipeline.consumptionDate": "Fecha de consumo",
     "static.common.dataCheck": "Comprobación de datos",
     "static.extrapolation.MinimumValues": "meses de datos de consumo acutal. Los valores mínimos necesarios para las diversas características se encuentran a continuación.",
@@ -2755,6 +2773,7 @@
     "static.procurementagent.procurementAgentColorCode": "Codigo de color",
     "static.language.languagecodetext": "Ingresar el código del idioma",
     "static.userHead.user": "Usuario",
+    "static.priority.mediumDesc": "El usuario puede esperar una resolución sin causar una interrupción sustancial (afecta una función crítica para el negocio, pero existe una solución alternativa).",
     "static.procurementUnit.unitsPerContainerText": "Ingresar el no. de unidades por contenedor de 40'",
     "static.shipment.shipdate": "Fecha de envío",
     "static.extrapolation.ForecastMethods": "Los métodos de estimación en QAT están organizados de simples a sofisticados.",
@@ -2851,9 +2870,11 @@
     "static.supplyPlan.amc": "CMM",
     "static.programPU.localProcurementAgentTooltip": "Délai de livraison entre prévu et reçu. Utilisé pour les expéditions où `l`approvisionnement local` est sélectionné.",
     "static.dashboard.viewSupplyPlan": "Ver planes de suministro en espera de aprobación",
+    "static.priority.highest": "Mas alto",
     "static.QATForecastImport.StepTwo": "(Paso 2)",
     "static.forecastProgram.MaxvalueofStockoutdays": "Valor máximo de los días en ruptura",
     "static.report.shippedToArrivedRoadLeadTime": "En tránsito a llegado (terrestre)",
+    "static.shipmentTooltip.puCost": "Cantidad de pedido (PU) * Precio por PU",
     "static.program.programDiscription": "Notas de la versión",
     "static.organisation.organisationtext": "Ingresar el nombre de la organización",
     "static.supplyPlan.notesDetailsCon": "DD-MMM-YY (Región | Fuente de datos) Notas",
@@ -3176,6 +3197,7 @@
     "static.usageTemplate.calculateUsageFrequency": "Calcular la frecuencia de uso",
     "static.ForecastSummary.ForecastedQuantity": "Cantidad total estimada",
     "static.ManageTree.PotentialChildren": "Nodos derviados potenciales",
+    "static.shipmentTooltip.total": "Costo de PU + Costo de flete",
     "static.problemReport.issueReviewStatus": "Status de revisión del problema",
     "static.pipeline.pplnfundingsource": "Fuente de financiamiento de PipeLine",
     "static.equivalancyUnit.ManageMappings": "Utilice la pantalla principal para administrar mapeos entre unidades de equivalencia y productos (estimación). Los mapeos a nivel de dominio están disponibles para todos los usuarios y se indican mediante \"Todos\".",
@@ -3210,6 +3232,7 @@
     "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Configuración del producto",
     "static.compareAndSelect.selectOne": "Seleccione una estimación para",
     "static.forecastValidation.noBranchesMissingPU": "No hay ramas sin productos (planificación)",
+    "static.shipmentTooltip.orderQtyPU": "Cantidad de pedido (ARU) * Factor de conversión",
     "static.common.realmLevel": "Nivel de dominio",
     "static.user.validemail": "Ingresar su correo electrónico",
     "static.dataEntryAndAdjustments.DataIsAssumed": "De manera predeterminada, se supone que los datos se ingresan en por producto. Sin embargo, el usuario puede especificar la unidad apropiada para los datos detallados haciendo clic en el enlace \"cambiar\" debajo del nombre del producto y en la ventana emergente posterior, eligiendo ingresar datos en la unidad del producto, en unidad de producto (estimación) - aplicando un factor de conversión administrado a nivel del dominio); u otra unidad ingresada por el usuario (y factor de conversión).",
@@ -3231,6 +3254,7 @@
     "static.organisationType.organisationTypeName": "Nombre del tipo de organización",
     "static.ModelingTransfer.ShowMonthlyData": "Además, al hacer clic en \"Mostrar datos mensuales\", los usuarios pueden ver cómo sus entradas de modelado y transferencia han afectado los datos mensuales tanto en forma gráfica como tabular. En los datos tabulares, los usuarios pueden agregar un cambio manual para un mes específico o ingresar un porcentaje de índice de estacionalidad (solo disponible para nodos %), según sea necesario. Si un usuario marca la casilla \"El cambio manual afecta los meses futuros\", el monto manual agregado al final del mes se trasladará al comienzo del mes siguiente. Si ninguno de estos campos es relevante, los usuarios pueden desmarcar \"Mostrar (estacionalidad y) cambio manual\" para ocultar estas columnas.",
     "static.report.maxMosOrQty": "Max (meses o cantidad)",
+    "static.shipmentTooltip.erpFlag": "Se verifica automáticamente si este envío está vinculado mediante la pantalla Vincular envío de ERP",
     "static.productValidation.subTotal": "Total parcial",
     "static.report.problemAction.automatic": "Automático",
     "static.shipmentDataEntry.suggestedShipmentQtyConfirm1": "Sugerir agregar",
