changes highlighted by user

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -302,7 +302,7 @@
     "static.user.validpasswordlength": "Password can be 30 characters max",
     "static.extrapolation.BeforeYou": "Before you use this screen, please ensure you have completed the",
     "static.supplyPlan.index": "Index",
-    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Consumption Forecast",
+    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Forecast",
     "static.mt.programNotMatch": "Program does not match.",
     "static.fundingSource.selectFundingSource": "Select Funding Source",
     "static.loadDeleteProgram.loadDeleteProgram": "Download/Delete Program",
@@ -649,7 +649,7 @@
     "static.dashboard.realmcountrylist": "Realm countries",
     "static.report.historicalConsumptionDiff": "Historical Consumption Difference",
     "static.report.isincludeplannedshipmentSelect": "Include Planned Shipments",
-    "static.compareAndSelect.belowLowestConsumption": "% below the lowest consumption forecast.",
+    "static.compareAndSelect.belowLowestConsumption": "% below forecast.",
     "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
     "static.common.listtree": "List Tree",
     "static.dataentry.stockedOutPer": "Stockout Rate (%)",
@@ -1022,7 +1022,7 @@
     "static.common.programAndProgram": "Program",
     "static.supplyPlan.maxQtyFormula6": "Max Qty = 26,176",
     "static.dataEntryAndAdjustments.ClickInterpolate": "Click the green \"Interpolate\" button in the middle right of the screen to search for periods where the consumption value is blank and replace them with an interpolated value. QAT interpolates by finding the nearest values on either side (before or after the blank), calculates the straight line in between them and uses that straight-line formula to calculate the value for the blank(s).",
-    "static.compareAndSelect.aboveHighestConsumption": "% above the highest consumption forecast.",
+    "static.compareAndSelect.aboveHighestConsumption": "% above the highest forecast.",
     "static.supplyPlan.artmisShipments": "PSM Shipment from ARTMIS",
     "static.mt.shipentDelivered": "Shipment is already delivered",
     "static.procurementagent.realm": "Realm",
@@ -2885,7 +2885,7 @@
     "static.language.languageCode": "Language display name",
     "static.listTree.missingPlanningUnits": "Planning Units that are missing, inactive or unchecked for Tree Forecast in current program: (To see full list of current Planning Units, see",
     "static.dataentry.downloadTemplate": "Download template",
-    "static.compareAndSelect.forecastErrorMonths": "Forecast Error (# Months Used)",
+    "static.compareAndSelect.forecastErrorMonths": "Forecast (Months)",
     "static.quantimed.planningUnitNotFoundText": "Planning Unit Not Found",
     "static.loadDelDataset.programWithSameVersion": "Program with same version already exist do you want to override data.",
     "static.translation.labelCode": "Label code",
