--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3348,5 +3348,8 @@
     "static.tree.conversionFUToPU":"FU:PU Conversion Factor",
     "static.tooltip.conversionFactorPU":"For more details, go to Realm Level Masters > Products > Planning Units. If data looks incorrect, please submit a ticket in the QAT helpdesk.",
     "static.tooltip.planningUnitSettings":"Program Admins can update Planning Unit Settings & Notes under Program Management > Update Planning Unit.",
-    "static.tooltip.planningUnitNotes":"Program Admins can update Planning Unit Notes under Program Management > Update Planning Unit."
+    "static.tooltip.planningUnitNotes":"Program Admins can update Planning Unit Notes under Program Management > Update Planning Unit.",
+    "static.module":"Module",
+    "static.program.noOfProgramsUsingPU":"# Programs using PU",
+    "static.program.noOfProgramsUsingFU":"# Programs using FU"
 }
