--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3340,7 +3340,7 @@
     "static.tree.parentNode":"Parent Node",
     "static.tree.destination":"Destination",
     "static.tree.moveCopyNote":"Note: The entire branch (including all child nodes) will be moved/copied",
-    "static.forecastErrorReport.planningUnitAboveThreshold":"Planning Unit Error is above the Forecast Error Threshold",
+    "static.forecastErrorReport.planningUnitAboveThreshold":"Calculated Forecast Error is above the Forecast Error Threshold",
     "static.forecastErrorReport.forecastErrorThreshold":"Forecast Error Threshold",
     "static.forecastErrorReport.planningUnitAboveThresholdNote":"Note: The Forecast Error Threshold values will not be highlighted red if viewing this report in Equivalency Units or multiple Forecasting Units/Planning Units",
     "static.scenarioPlanning.phaseInPhaseOut":"Forecast Phase In/Out Product",
