--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -302,7 +302,7 @@
     "static.user.validpasswordlength": "Password can be 30 characters max",
     "static.extrapolation.BeforeYou": "Before you use this screen, please ensure you have completed the",
     "static.supplyPlan.index": "Index",
-    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Forecast",
+    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Consumption Forecast(s)",
     "static.mt.programNotMatch": "Program does not match.",
     "static.fundingSource.selectFundingSource": "Select Funding Source",
     "static.loadDeleteProgram.loadDeleteProgram": "Download/Delete Program",
@@ -1022,7 +1022,7 @@
     "static.common.programAndProgram": "Program",
     "static.supplyPlan.maxQtyFormula6": "Max Qty = 26,176",
     "static.dataEntryAndAdjustments.ClickInterpolate": "Click the green \"Interpolate\" button in the middle right of the screen to search for periods where the consumption value is blank and replace them with an interpolated value. QAT interpolates by finding the nearest values on either side (before or after the blank), calculates the straight line in between them and uses that straight-line formula to calculate the value for the blank(s).",
-    "static.compareAndSelect.aboveHighestConsumption": "% above the highest forecast.",
+    "static.compareAndSelect.aboveHighestConsumption": "% above highest",
     "static.supplyPlan.artmisShipments": "PSM Shipment from ARTMIS",
     "static.mt.shipentDelivered": "Shipment is already delivered",
     "static.procurementagent.realm": "Realm",
@@ -3247,5 +3247,9 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.compareAndSelect.selectForecast": "Click Planning Unit to display details",
+    "static.compareAndSelect.forecastSelected": "Forecast selected.",
+    "static.compareAndSelect.forecastNotSelected": "Forecast not selected",
+    "static.compareAndSelect.showPUPanel": "Show PU panel"
 }
